tests/unit-fail-compilation/j084d.ref
j084d.c:2:1: error: Redefinition of symbol: a.
  Constraint violation (CV-TDG13). See C11 sec. 6.9:3
Translation failed (config dumped). Run kcc -d j084d.c to see commands run.
