tests/unit-fail-compilation/j084d.c
int a = 1;
int a = 1;

int main(void) {
      return 0;
}
